# quant-signals

./: .gitignore  DECISIONS.md  HYPOTHESES.md  README.md  pyproject.toml  universe.txt
.github/workflows/: ci.yml  news.yml
experiments/: h1_momentum.py  momentum.py  reversal_variants.py
news/: 2026-06.jsonl  2026-07.jsonl
src/qsignals/: backtest.py  db.py  panel.py  signals.py  walkforward.py
src/qsignals/ingest/: cli.py  news.py  news_cli.py  yahoo.py
tests/: test_backtest.py  test_db.py  test_news.py  test_walkforward.py
