[project]
name = "quant-signals"
version = "0.1.0"
description = "Signal research on news sentiment and price history, with honest backtesting"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.2",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
qs-ingest = "qsignals.ingest.cli:main"
qs-news = "qsignals.ingest.news_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qsignals"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
